(1) removed registration form because it would allow anyone to get a staff account (2) added login page (3) login required on all staff pages (4) added logout (5) navbar displays who is logged in

--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -17,14 +17,29 @@
             ></li>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
+            <li>
+               {% if user.is_authenticated %}
+                <p class="navbar-text">Logged in as <strong>{{user.username}}</strong></p>
+               {% endif %}
+            </li>
+            <li>
+               {% if user.is_authenticated %}
+                      <button type="button" class="btn btn-default navbar-btn" onclick="window.location='{% url 'logout' %}'" id="logout-button">
+                          Logout
+                      </button>
+               {% endif %}
+              </li>
               <li>
                   <a>
                     {% if LotteryNumber %}
                         Next Up: {{ LotteryNumber }}
                     {% endif %} 
                   </a>
+                  {# <a href="{% url 'login' %}">Login</a> #}
               </li>
+            
 	      </ul>
+       
     	</div><!--/.nav-collapse -->
     </div>
 </nav>
