--- a/staff/templates/staff/select/room.html
+++ b/staff/templates/staff/select/room.html
@@ -45,29 +45,26 @@
 
       <div class="starter-template">
         <h1>Welcome to Room Selection</h1>
-	<form method="POST" class="post-form form-horizontal" action="{{Action}}">{% csrf_token %}
-	
-    <div class="panel panel-default">
-        <div class="panel-heading">
-	        <h1 class="panel-title">{{HeaderText}}</h1>
-        </div>
-        <div class="panel-body">
-            {% for field in form %}
-            <div class="form-group">
-            <label for="FormInput" class = "col-sm-4 control-label">{{field.label}} </label>
+        <form method="POST" class="post-form form-horizontal" action="{{Action}}">{% csrf_token %}
 
-            <div class="col-sm-8">
-                {{field}}
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h1 class="panel-title">{{HeaderText}}</h1>
+                </div>
+                <div class="panel-body">
+                    {% for field in form %}
+                    <div class="form-group">
+                    <label for="FormInput" class = "col-sm-4 control-label">{{field.label}} </label>
+
+                    <div class="col-sm-8">
+                        {{field}}
+                    </div>
+                    </div>
+                    {% endfor %}
+                    <button type="submit" class="save btn btn-default form-btn">Next</button>
+                </div>
             </div>
-            </div>
-	        {% endfor %}
-            <button type="submit" class="save btn btn-default">Next</button>
-        </div>
-	</div>
-	</p>
-
-
-	</form>
+        </form>
       </div>
 
           <div class="row bs-wizard" style="border-bottom:0;">
