--- a/staff/templates/staff/select/studentInfo.html
+++ b/staff/templates/staff/select/studentInfo.html
@@ -120,8 +120,8 @@
                             {% endfor %}
                                         
                             <button onclick="window.history.back();" id="backButton" 
-	                           class="save btn btn-default" >Back</button>
-                            <button type="submit" class="save btn btn-default">Next</button>
+	                           class="save btn btn-default form-btn" >Back</button>
+                            <button type="submit" class="save btn btn-default form-btn">Next</button>
                             </div>
                         </div>
                   </div>
