--- a/staff/templates/staff/select/suite.html
+++ b/staff/templates/staff/select/suite.html
@@ -50,7 +50,7 @@
                     {% endfor %}
                 </div>
             </form>
-            <button type="submit" class="save btn btn-default bottom-button">Next</button>
+            <button type="submit" class="save btn btn-default form-btn">Next</button>
           </div>
         
           <!-- Progress Bar -->
