Extra changes for the Edit forms

--- a/staff/templates/staff/edit.html
+++ b/staff/templates/staff/edit.html
@@ -64,7 +64,7 @@
     <hr class="">
     <div class="row">
         <div class="col-md-4">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <a href= "/staff/edit/room">
                         <h3 class="">Edit Room</h3>
@@ -75,18 +75,20 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
+                
                 <div class="panel-heading">
-                    <a href = "/staff/edit/building">
-                        <h3 class="">Edit Building</h3>
+                    <a href = "/staff/edit/building" class="btn-block">
+                        <h3 class="">Edit Building</h3>  
                     </a>
                 </div>
+                
                 <div class="panel-body">Use this to make changes to the details of a building.
                     <br><br>Ex. Saunders listed as having no singles.</div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
                     <div class="panel-heading">
                         <a href = "/staff/reviewroom">
                             <h3 class="">Edit Selection</h3>
