--- a/staff/templates/staff/editRoom.html
+++ b/staff/templates/staff/editRoom.html
@@ -57,5 +57,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
     <script src="/static/staff/RoomSelect/buildingRoomsFilter.js"></script>
+    <script src="/static/staff/RoomSelect/addFormControlToInputs.js"></script>
   </body>
 </html>
