--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -1,3 +1,9 @@
+<style type='text/css'>
+        ul.nav li.dropdown:hover ul.dropdown-menu {
+            display: block;
+        }
+    </style>
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -11,10 +17,22 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'room-select' %}">Room Selection</a></li>
-            <li><a href="{% url 'loto-num' %}">Number Input</a></li>
-            <li><a href="{% url 'review-room' %}">Review a Room</a
-            ></li>
+              <li class = "dropdown">
+                  <a class = "dropdown-toggle disabled" data-toggle="dropdown" href= "{% url 'select' %}">Selection Options</a>
+                  <ul class = "dropdown-menu">
+                      <li><a href = "{% url 'room-select' %}">Select Room</a></li>
+                      <li><a href = "{% url 'suite-select' %}"> Select Suite</a></li>
+                  </ul>
+              </li>
+              <li class = "dropdown">
+                  <a class = "dropdown-toggle disabled" data-toggle="dropdown" href= "{% url 'edit' %}">Edit Option</a>
+                    <ul class = "dropdown-menu">
+                      <li><a href = "{% url 'edit-room' %}">Edit Room</a></li>
+                      <li><a href = "{% url 'edit-building' %}">Edit Building</a></li>
+                      <li><a href = "{% url 'review-room' %}">Edit Selection</a></li>
+                    </ul>
+              </li>
+            <li><a href="{% url 'loto-num' %}">Number Input</a>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
             <li>
