--- a/students/static/students/building/building.css
+++ b/students/static/students/building/building.css
@@ -10,15 +10,6 @@
     border-radius: 0 !important;
 }
 */
-.stat-panel-heading .panel-title {
-    text-transform: uppercase;
-    font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", "Ideal Sans", sans-serif;
-    font-weight: 300;
-    letter-spacing: 1.33px;
-    line-height: 1.2;
-    font-size: 1.25rem;
-    color: #686e78;
-}
 
 #page-title {
     margin-bottom: 20px;   
@@ -30,6 +21,43 @@
 
 .apt-room {
     background-color: #fcfcfc;
+}
+
+.building-label {
+    background-color: #F7882F;   
+}
+
+/* panels */
+.panel {
+    background-color: #F7C331;
+    border: none;
+    border-radius: 0;
+    color: white;
+}
+
+.panel-title {
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-weight: 300;
+    letter-spacing: 1.2px;
+    line-height: 1.7;
+    font-size: 1.5rem;
+    color: white;
+    background-color: #F7C331;
+    border-radius: 0;
+    border: none;
+    border-color: #A9A9A9; 
+}
+
+.stat-panel-heading {
+    background-color: #F7C331;
+    border: none;
+    border-radius: 0;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
+    padding-bottom: 5px;
 }
 
 /* -------------------------
