--- a/students/static/students/building/building.css
+++ b/students/static/students/building/building.css
@@ -24,7 +24,11 @@
 }
 
 .building-label {
-    background-color: #F7882F;   
+    background-color: #fc4a1a;   
+}
+
+.building-stats {
+    margin-bottom: 20px;
 }
 
 /* panels */
@@ -43,14 +47,53 @@
     line-height: 1.7;
     font-size: 1.5rem;
     color: white;
-    background-color: #F7C331;
     border-radius: 0;
     border: none;
-    border-color: #A9A9A9; 
+    border-color: #F7C331; 
 }
 
 .stat-panel-heading {
     background-color: #F7C331;
+    border: none;
+    border-radius: 0;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
+    padding-bottom: 5px;
+}
+
+.panel-green {
+    background-color: #01ABAA;
+    border: none;
+    border-radius: 0;
+    color: white;
+}
+
+.nodecor:hover {
+    text-decoration: none;
+}
+
+.panel-title-green {
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-weight: 300;
+    letter-spacing: 1.2px;
+    line-height: 1.7;
+    font-size: 1.5rem;
+    color: white;
+    border-radius: 0;
+    border: 0;
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+
+.panel-title-green:hover {
+    color: black;
+}
+
+.stat-panel-heading-green {
+    background-color: #01ABAA;
     border: none;
     border-radius: 0;
     color: white;
