--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -98,7 +98,7 @@
                   <!-- Link to floor plan images if small screen -->
                   <div class="container col-md-6 hidden-md hidden-lg">
                     <a href="#floorPlans" class="nodecor" id="floorPlanViewButton">
-                      <div class="panel-green panel-default nodecor">
+                      <div class="panel panel-green panel-default nodecor">
                             <div class="stat-panel-heading-green nodecor">
                                 <h3 class="panel-title-green nodecor" id="floorPlanViewText"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span> View Floor Plans <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></h3>
                             </div>
@@ -119,7 +119,7 @@
 
         <!-- filter by floor dropdown available if there are rooms left -->
         {% if num_floors > 1 %}
-        <select id="floorSelect" class="selectpicker" data-style="btn-primary">
+        <select id="floorSelect" class="selectpicker floor-selector">
             <option name="all" value="all">All Floors</option>
             {% for floor in floors %}
                 <option name="{{floor}}" value="{{floor}}">Floor {{floor}}</option>
@@ -294,7 +294,7 @@
           {% else %}
             <h3>There are currently no available rooms</h3>
           {% endif %}
-      </div><!--/first half of screen-->
+    </div><!--/first half of screen-->
           
     <!-- horizontal line visible on smaller screens to divide floor plans and open room list -->
     {% if floor_images %}
@@ -333,7 +333,6 @@
         </div>
     </div><!--/floor plans-->
     {% endif %}
-        
     </div><!--/row-offcanvas -->
 
 
